--- a/candy/mods/iris.pw.toml
+++ b/candy/mods/iris.pw.toml
@@ -1,4 +1,4 @@
-name = "[MOD] Iris Shaders"
+name = "Iris Shaders"
 filename = "iris-mc1.19-1.2.5.jar"
 side = "client"
 
@@ -6,11 +6,6 @@ side = "client"
 url = "https://cdn.modrinth.com/data/YL57xq9U/versions/1.19.x-v1.2.5/iris-mc1.19-1.2.5.jar"
 hash-format = "sha1"
 hash = "499a3e1b13eafb0eb4dceee1152c84b23211e0d5"
-
-[option]
-optional = true
-default = true
-description = "Habilltar o deshabilitar el mod de shaders"
 
 [update]
 [update.modrinth]
