--- a/gos/mods/qsl.pw.toml
+++ b/gos/mods/qsl.pw.toml
@@ -1,13 +1,13 @@
 name = "Quilted Fabric API / Quilt Standard Libraries"
-filename = "qfapi-2.0.0-alpha.4_qsl-2.0.0-beta.5_fapi-0.56.1_mc-1.19.jar"
+filename = "qfapi-2.0.0-beta.3_qsl-2.0.0-beta.9_fapi-0.57.0_mc-1.19.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/qvIfYCYJ/versions/2.0.0-alpha.4+0.56.1-1.19/qfapi-2.0.0-alpha.4_qsl-2.0.0-beta.5_fapi-0.56.1_mc-1.19.jar"
+url = "https://cdn.modrinth.com/data/qvIfYCYJ/versions/2.0.0-beta.3+0.57.0-1.19/qfapi-2.0.0-beta.3_qsl-2.0.0-beta.9_fapi-0.57.0_mc-1.19.jar"
 hash-format = "sha1"
-hash = "effab9273b9ff72e9f184a4ac9d7331b4993d8dd"
+hash = "7d9c35094cd3b0561276e345da7435b25dc264fc"
 
 [update]
 [update.modrinth]
 mod-id = "qvIfYCYJ"
-version = "6PllArdw"
+version = "Sq6bz7rT"
