--- a/neu/mods/mouse-wheelie.pw.toml
+++ b/neu/mods/mouse-wheelie.pw.toml
@@ -1,13 +1,13 @@
 name = "Mouse Wheelie"
-filename = "mousewheelie-1.10.0+mc1.19-pre1.jar"
+filename = "mousewheelie-1.10.1+mc1.19-pre1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/u5Ic2U1u/versions/1.10.0+mc1.19-pre1/mousewheelie-1.10.0%2Bmc1.19-pre1.jar"
+url = "https://cdn.modrinth.com/data/u5Ic2U1u/versions/1.10.1+mc1.19-pre1/mousewheelie-1.10.1%2Bmc1.19-pre1.jar"
 hash-format = "sha1"
-hash = "410c89acdf2ffb6503f79e70737467083a4ab843"
+hash = "020c4ed30a9431f7fb8251c917a84d515baefcca"
 
 [update]
 [update.modrinth]
 mod-id = "u5Ic2U1u"
-version = "3K7SCKOR"
+version = "Gud3HLU2"
