--- a/gos/mods/fancymenu-fabric.pw.toml
+++ b/gos/mods/fancymenu-fabric.pw.toml
@@ -1,8 +1,13 @@
-name = "Fancy Menu (Fabric)"
-filename = "fancymenu_fabric_2.7.2_MC_1.19.jar"
-side = "client"
+name = "FancyMenu [Fabric]"
+filename = "fancymenu_fabric_2.9.1_MC_1.19.jar"
+side = "both"
 
 [download]
-url = "https://media.forgecdn.net/files/3821/671/fancymenu_fabric_2.7.2_MC_1.19.jar"
 hash-format = "sha1"
-hash = "c4aa85960e954fa8cb634232797f6a80bf785528"
+hash = "8ae59356aaafb34be5372a528807d3febc2aee20"
+mode = "metadata:curseforge"
+
+[update]
+[update.curseforge]
+file-id = 3851933
+project-id = 416796
